// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/admin_console/group_settings/group_details/GroupProfileAndSettings should match snapshot, with toggle off 1`] = `
<AdminPanel
  id="group_profile"
  subtitle={
    Object {
      "defaultMessage": "The name for this group.",
      "id": "admin.group_settings.group_detail.groupProfileDescription",
    }
  }
  title={
    Object {
      "defaultMessage": "Group Profile",
      "id": "admin.group_settings.group_detail.groupProfileTitle",
    }
  }
>
  <Memo(GroupProfile)
    customID="groupDisplayName"
    isDisabled={true}
    name="GroupProfileAndSettings"
    showAtMention={false}
    title={
      Object {
        "defaultMessage": "Name:",
        "id": "admin.group_settings.group_details.group_profile.name",
      }
    }
  />
  <div
    className="group-settings"
  >
    <div
      className="group-settings--body"
    >
      <div
        className="section-separator"
      >
        <hr
          className="separator__hr"
        />
      </div>
      <GroupSettingsToggle
        allowReference={false}
        isDefault={false}
        onToggle={[MockFunction]}
      />
    </div>
  </div>
</AdminPanel>
`;

exports[`components/admin_console/group_settings/group_details/GroupProfileAndSettings should match snapshot, with toggle on 1`] = `
<AdminPanel
  id="group_profile"
  subtitle={
    Object {
      "defaultMessage": "The name for this group.",
      "id": "admin.group_settings.group_detail.groupProfileDescription",
    }
  }
  title={
    Object {
      "defaultMessage": "Group Profile",
      "id": "admin.group_settings.group_detail.groupProfileTitle",
    }
  }
>
  <Memo(GroupProfile)
    customID="groupDisplayName"
    isDisabled={true}
    name="GroupProfileAndSettings"
    showAtMention={false}
    title={
      Object {
        "defaultMessage": "Name:",
        "id": "admin.group_settings.group_details.group_profile.name",
      }
    }
  />
  <div
    className="group-settings"
  >
    <div
      className="group-settings--body"
    >
      <div
        className="section-separator"
      >
        <hr
          className="separator__hr"
        />
      </div>
      <GroupSettingsToggle
        allowReference={true}
        isDefault={false}
        onToggle={[MockFunction]}
      />
    </div>
  </div>
  <Memo(GroupProfile)
    customID="groupMention"
    name="GroupProfileAndSettings"
    onChange={[MockFunction]}
    showAtMention={true}
    title={
      Object {
        "defaultMessage": "Group Mention:",
        "id": "admin.group_settings.group_details.group_mention.name",
      }
    }
  />
</AdminPanel>
`;
